--- a/booki-starter-code-master/css/style.css
+++ b/booki-starter-code-master/css/style.css
@@ -224,32 +224,35 @@ input {
     width: 65%;
 }
 
+.hebergements-title .section-title {
+    padding-bottom: 30px;
+}
+
 .hebergements-cards {
     display: flex;
     flex-wrap: wrap;
-    margin-right: 30px;
+    gap: 24px;
     
 }
 
 .hebergements-cards .card {
     display: flex;
     flex-wrap: wrap;
-    margin-top: 33px;
+    
     flex-direction: column;
-    width: 25%;
-    margin-right: 30px;
-    object-fit: cover;
+    width: 30%;
+    height: 207.25px;
     
-    
+   
 
 }
 
 .hebergements-cards img {
-
-    height: 136px;
+    width: 100%;
+    height: 124px;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
-    object-fit: fill;
+    
     
 }
 
@@ -263,16 +266,34 @@ input {
 }
 
 .hebergements-cards .card-title {
-    margin-top: 10px;
-    margin-bottom: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    height: 19px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    margin-left: 15px;
 }
 
 .hebergements-cards .card-subtitle {
     margin: 0;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    margin-left: 15px;
+    margin-bottom: 8px;
+    
 }
 
 .hebergements-cards .card-rating {
-    margin-bottom: 5px;
+    display: flex;
+    margin-left: 15px;
+    margin-top: 8px;
+
+}
+
+.hebergements .afficher-plus {
+    height: 21px;
+    margin-top: 30px;
 }
 
 
