--- a/booki-starter-code-master/css/style.css
+++ b/booki-starter-code-master/css/style.css
@@ -79,18 +79,16 @@ ul {
     padding: unset;
 }
 
-nav li {
-    padding: 37px 33.5px;
-}
+
 
 nav li:hover {
-    border-top: solid 2px #0065FC;
+    
     cursor: pointer;
 }
 
 nav li:hover a {
     color: #0065FC;
-    width: 113px;
+    width: fill;
     height: 2px;
     left: 0px;
     top: 0px;
@@ -104,6 +102,18 @@ nav li:hover a {
 a {
     text-decoration:none;
     color: black;
+}
+
+/** pour change la bordure selon le format **/
+
+@media screen and (min-width: 767.98px) {
+    nav li:hover {
+    border-top: solid 2px #0065FC;    
+    }
+    nav li {
+        padding: 37px 33.5px;  
+      }
+    
 }
 
 /***** Formulaire ***/
@@ -164,6 +174,8 @@ input {
     .button-rechercher i {
     display: none;
     }
+
+    
     }
 
     
@@ -184,6 +196,7 @@ input {
 
 .Filtres i {
     padding-right: 15px;
+
 }
 .filter-buttons {
     border-style: solid;
@@ -209,9 +222,17 @@ input {
     margin-right: 8px;
 }
 
+
+
+button.filter-buttons:hover {
+    background-color: #DEEBFF;
+}
+    
+
+
 /**** Pour changer la position du texte Filtres selon le format ***/
 
-@media screen and (min-width: 1024px) { 
+@media screen and (min-width: 767.98px) { 
     .Filtres {
         display: flex;
         flex-direction: row;
@@ -421,15 +442,16 @@ input {
 
 footer .container {
     background-color: #F2F2F2;
-
+    
 }
 
 .row {
     display: flex;
-    justify-content: space-between;
+   
     margin-top: 20px;
     width: 75%;
     padding-left: 15px;
+    
 }
 
 
@@ -480,9 +502,25 @@ footer .container {
     .Filtres i {
         padding-right: 15px;
     }
+    
 }
 
 /* Small devices (phones, less than 768px) */
 @media screen and (max-width: 767.98px) {
     /** header **/
-}
+    header {
+        flex-direction: column;
+    }
+    nav li:hover {
+        border-bottom: solid 2px #0065FC;
+        border-width: fill;
+        cursor: pointer;
+    }
+    nav li {
+        width: 187.5px;
+        height: 19px;
+        
+    }
+
+    
+} 
