--- a/booki-starter-code-master/css/style.css
+++ b/booki-starter-code-master/css/style.css
@@ -116,7 +116,15 @@ a {
     
 }
 
-/***** Formulaire ***/
+
+
+
+/***** Formulaire & titre ***/
+
+.headline h1 {
+    font-size: 22px ;
+}
+
 
 form {
     display: flex;
@@ -156,6 +164,8 @@ input {
     font-size: 17px;
 }
 
+/** changement du bouton rechercher selon le format **/
+
 @media screen and (max-width: 768px) {
     .button-rechercher .texte {
     display: none;
@@ -164,6 +174,13 @@ input {
     .button-rechercher i {
     display: inline-block;
     }
+
+    .button-rechercher {
+        border-bottom-left-radius: 15px;
+        border-top-left-radius: 15px;
+        padding: 20px;
+    }
+
     }
     
     @media only screen and (min-width: 769px) {
@@ -174,7 +191,7 @@ input {
     .button-rechercher i {
     display: none;
     }
-
+    
     
     }
 
@@ -195,7 +212,7 @@ input {
 }
 
 .Filtres i {
-    padding-right: 15px;
+    padding-right: 10px;
 
 }
 .filter-buttons {
@@ -203,12 +220,13 @@ input {
     border-color: #d9d9d9;
     font-weight: 700;
     border-radius: 100px;
-    padding: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
     justify-content: flex-start;
     margin: 5px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     font-size: 17px;
-    border-width: 3px;
+    border-width: 2px;
     background-color: white;
 }
 
@@ -232,7 +250,7 @@ button.filter-buttons:hover {
 
 /**** Pour changer la position du texte Filtres selon le format ***/
 
-@media screen and (min-width: 767.98px) { 
+@media screen and (min-width: 1024px) { 
     .Filtres {
         display: flex;
         flex-direction: row;
@@ -316,7 +334,6 @@ button.filter-buttons:hover {
     margin-bottom: 8px;
     margin-left: 15px;
 
-    
 }
 
 .hebergements-cards .card-subtitle {
@@ -340,10 +357,8 @@ button.filter-buttons:hover {
     margin-top: 30px;
 }
 
-
-
-
 /****** Populaires ***********/
+
 .populaires {
     width: 32%;
 }
@@ -405,10 +420,7 @@ button.filter-buttons:hover {
     margin-right: 30px;
     margin-bottom: 65px;
    
-
     justify-content: flex-end;
-    
-    
 }
 
 .icones-activites .card {
@@ -416,7 +428,6 @@ button.filter-buttons:hover {
     padding-top: 0px;
     padding-right: 0px;
     padding-left: 0px;
-    
     
 }
 
@@ -442,23 +453,29 @@ button.filter-buttons:hover {
 
 footer .container {
     background-color: #F2F2F2;
-    
+   
 }
 
 .row {
     display: flex;
    
-    margin-top: 20px;
-    width: 75%;
+    margin-top: 0px;
+    width: 80%;
     padding-left: 15px;
     
+    justify-content: space-between;   
 }
 
+.row h4 {
+    margin-bottom: 0px;
+}
 
 .footer-col ul li {
-    padding: 10px;
+    padding: 7px;
     padding-left: 0px;
+
 }
+
 
 
 
@@ -499,9 +516,7 @@ footer .container {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
-    .Filtres i {
-        padding-right: 15px;
-    }
+   
     
 }
 
@@ -513,14 +528,10 @@ footer .container {
     }
     nav li:hover {
         border-bottom: solid 2px #0065FC;
-        border-width: fill;
+        border-width: 100%;
         cursor: pointer;
     }
-    nav li {
-        width: 187.5px;
-        height: 19px;
-        
-    }
+    
 
     
 } 
