--- a/booki-starter-code-master/css/style.css
+++ b/booki-starter-code-master/css/style.css
@@ -63,6 +63,14 @@ header {
     height: 79px;
 }
 
+.logo {
+    height: 79px;
+    width: 121.09px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .logo img {
     width: 61.09px;
     height: 19px;
@@ -122,90 +130,81 @@ a {
 /***** Formulaire & titre ***/
 
 .headline h1 {
-    font-size: 22px ;
+    margin: 8px 0px 0px 0px;
+    font-size: 16px;
 }
 
-
-form {
+.recherche {
+    height: 49px;
+    width: 377px;
+    
+  }
+  
+  form {
+    display: inline-flex;
+    flex-direction: row;
+    
+    
+    
+  }
+  
+  label {
+    width: 50px;
+    background: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 15px 0px 0px 15px;
     display: flex;
-    margin-bottom: 20px;
-}
-
-.Logo-location {
-    background-color:  #F2F2F2; 
-    text-align: center;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-    padding: 20px;
+    justify-content: center;
+    align-items: center;
     
-    left: 18px;
-    top: 15px;
-}
-
-input {
-    text-align: center;
-    border: solid #F2F2F2;
-   border-right: none;
+  }
+  
+  form input {
+    width: 195px;
+    padding: 0px 24px 0px 24px;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21px;
+    color: #000000;
+    background-color: #ffffff;
+    border-top: 1px solid #f2f2f2;
+    border-bottom: 1px solid #f2f2f2;
     border-left: none;
-    border-width: 0.8px;
-   
-}
-
-
-.button-rechercher {
-    color: white;
-    background-color: #0065FC;
-    cursor: pointer;
+    border-right: none;
+  }
+  
+  form button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 132px;
+    height: 49px;
+    background: #0065fc;
+    border-radius: 0px 15px 15px 0px;
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21px;
+    color: #ffffff;
     border: none;
-    padding: 10px;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    font-weight: 700;
-    font-size: 17px;
-}
+    
+  }
+  
+  .rechercher {
+    display: block;
+  }
 
-/** changement du bouton rechercher selon le format **/
-
-@media screen and (max-width: 768px) {
-    .button-rechercher .texte {
+  .loupe {
     display: none;
-    }
-    
-    .button-rechercher i {
-    display: inline-block;
-    }
+  }
 
-    .button-rechercher {
-        border-bottom-left-radius: 15px;
-        border-top-left-radius: 15px;
-        padding: 20px;
-    }
-
-    }
-    
-    @media only screen and (min-width: 769px) {
-    .button-rechercher .texte {
-    display: inline-block;
-    }
-    
-    .button-rechercher i {
-    display: none;
-    }
-    
-    
-    }
-
-    
-
-
-::placeholder {
-    font-weight: 700;
-    color: black;
-}
+  ::placeholder {
+    font-size: 16px;
+    color: #000000;
+  }
 
 /***** Filtres ******/
-
-
 
 .Filtres h2 {
     margin-right: 15px;
@@ -284,10 +283,7 @@ button.filter-buttons:hover {
 .hebergements .container {
     display: flex;
     width: 100%;
-    gap: 24px;
-    
- } 
-
+}
 
 .hebergements-title .section-title {
     display: flex;
@@ -356,6 +352,16 @@ button.filter-buttons:hover {
     margin-top: 30px;
 }
 
+/** espacement hebergement tablette et mobile **/
+
+@media screen and (min-width: 768.98px) { 
+    .hebergements .container {
+        display: flex;
+        width: 100%;
+        gap: 24px;
+     } 
+}
+
 /****** Populaires ***********/
 
 .populaires {
@@ -405,78 +411,87 @@ button.filter-buttons:hover {
 
 /***** Activités *****/
 
-.titre-activites h2 {
-    margin-left: 30px;
-    margin-top: 65px;
-    margin-bottom: 30px;
-}
-
-
-.icones-activites .activites-container {
+.activites {
+    width: 100%;
+  }
+  
+  .activites-main section {
+    background-color: #ffffff;
+    border-radius: 20px;
+    padding: 30px;
+    box-sizing: border-box;
+  }
+  
+  .activites-title {
     display: flex;
-    width: fill;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  
+  .activites-cards {
+    display: flex;
+    flex-direction: row;
     gap: 30px;
-    margin-right: 30px;
-    margin-bottom: 65px;
-   
-    justify-content: flex-end;
-}
-
-.icones-activites .card {
-    height: 439px;
-    padding-top: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    
-}
-
-.icones-activites img {
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
+  }
+  
+  .activites-cards .card {
+    margin-top: 30px;
+    width: 25%;
+    padding: 0;
+  }
+  
+  .activites-cards img {
+    width: 100%;
     height: 380px;
-    width: 297.5px;
-}
-
-.icones-activites .card-txt {
-    height: 19px;
-    width: 259.5px;
-    font-size: 16px;
-    font-weight: 700;
-    padding-bottom: 20px;
-    padding-left: 19px;
-}
-
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+  }
+  
+  .activites-cards .card-content {
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    margin: 20px 19px 20px 19px;
+  }
+  
+  .activites-cards .card-lien {
+    text-decoration: none;
+    color: #000000;
+    display: flex;
+    flex-direction: column;
+  }
 
 
 /***** Footer ****/
 
-footer .container {
-    background-color: #F2F2F2;
-   
-}
-
-.row {
+footer {
     display: flex;
-   
-    margin-top: 0px;
-    width: 80%;
-    padding-left: 15px;
-    
-    justify-content: space-between;   
-}
-
-.row h4 {
+    flex-direction: row;
+    align-items: flex-start;
+    height: 193px;
+    background-color: #f2f2f2;
+  }
+  
+  .colonne {
+    width: 33.3%;
+    padding-left: 10px;
+  }
+  
+  .colonne-text {
+    padding: 15px 0px 0px 0px;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+  
+  footer li {
+    list-style: none;
+  }
+  
+footer h3 {
     margin-bottom: 0px;
 }
-
-.footer-col ul li {
-    padding: 7px;
-    padding-left: 0px;
-
-}
-
-
-
 
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
@@ -515,22 +530,189 @@ footer .container {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+    
    
     
 }
 
 /* Small devices (phones, less than 768px) */
 @media screen and (max-width: 767.98px) {
+    body {
+        margin: 0px;
+      }
+    
+      .main-container {
+        padding: 0px;
+      }
+
+
     /** header **/
     header {
+        display: flex;
         flex-direction: column;
-    }
-    nav li:hover {
-        border-bottom: solid 2px #0065FC;
-        border-width: 100%;
-        cursor: pointer;
-    }
+        align-items: center;
+        margin: 0px -20px;
+
+      }
     
+      header nav {
+        width: 100%;
+        height: 35px;
+      }
+    
+      header nav ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        list-style: none;
+        padding: 0px;
+        margin: 0px;
+        
+      }
+    
+      header li {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        padding-bottom: 20px;
+      }
+    
+      .lien:hover {
+        padding-top: 0px;
+        border-top: none;
+      }
+    
+      header li:hover {
+        color: #0065fc;
+        padding-bottom: 20px;
+        border-bottom: solid 2px #0065fc;
+      }
+
+      header li:hover {
+        color: #0065fc;
+        padding-bottom: 20px;
+        border-bottom: solid 2px #0065fc;
+      }
+
+    /** formulaire de recherche **/
+      
+      .formulaire-et-filtre {
+        padding: 0px 20px 0px 20px;
+        width: auto;
+      }
+
+      .recherche {
+        width: 335px;
+      }
+    
+      .search-bar {
+        width: 335px;
+      }
+      form input {
+        width: 249px;
+      }
+    
+      .search-bar button {
+        width: 49px;
+        border-radius: 15px;
+        padding: 0px 0px 0px 0px;
+        margin-left: -13px;
+      }
+    
+      .rechercher {
+        display: none;
+      }
+    
+      .loupe {
+        display: block;
+      }
+
+    /** hébergements et populaires  **/
+    .hebergements-and-populaires {
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 15px;
+      }
+    
+      .hebergements-and-populaires section {
+        border-radius: 0px;
+      }
+
+    /** Populaires **/
+    section.populaires {
+        margin: 0px;
+      }
+    
+      .populaires-cards {
+        flex-direction: column;
+        justify-content: space-between;
+      }
+    
+      .populaires-cards .card {
+        width: auto;
+        margin-top: 15px;
+      }
+    
+    /** Hébergements **/
+
+    section.hebergements {
+    padding-top: 20px;
+    background-color: white;
+  }
+
+  .container {
+    flex-direction: column;
+    gap: 0px;
+  }
+
+  .container .card {
+    margin-top: 15px;
+    width: auto;
+  }
+
+  .hebergements-afficher {
+    margin-top: 15px;
+  }
+
+
+    /** Activités **/
+
+       .activites-cards {
+     flex-direction: column;
+     gap: 0px;
+   }
+
+    .activites-cards .card {
+      margin-top: 15px;
+      width: 100%;
+    }
+
+    .activites-cards img {
+      height: 141px;
+    }
+
+    .activites {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+    }
+
+
+      
+    /** Footer **/
+    footer {
+        flex-direction: column;
+        height: 461px;
+        gap: 20px;
+      }
+    
+      .colonne {
+        width: auto;
+        padding: 30px 30px 0px 30px;
+      }
+      footer h3 {
+        margin-top: 0px;
+      }
 
     
 } 
