--- a/booki-starter-code-master/css/style.css
+++ b/booki-starter-code-master/css/style.css
@@ -137,15 +137,11 @@ a {
 .recherche {
     height: 49px;
     width: 377px;
-    
   }
   
   form {
     display: inline-flex;
     flex-direction: row;
-    
-    
-    
   }
   
   label {
@@ -156,7 +152,6 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    
   }
   
   form input {
@@ -244,6 +239,8 @@ a {
 button.filter-buttons:hover {
     background-color: #DEEBFF;
 }
+
+
     
 
 
@@ -254,7 +251,6 @@ button.filter-buttons:hover {
         display: flex;
         flex-direction: row;
         justify-content: start;
-        
     }
   
 }
@@ -292,7 +288,6 @@ button.filter-buttons:hover {
 .hebergements-cards {
     display: flex;
     flex-wrap: wrap;
-    
 }
 
 .hebergements-cards .card {
@@ -301,7 +296,6 @@ button.filter-buttons:hover {
     flex-direction: column;
     width: 30%;
     margin-top: 33px;
-
 }
 
 .hebergements-cards img {
@@ -318,7 +312,6 @@ button.filter-buttons:hover {
     flex-direction: column;
     justify-content: space-between;
     box-sizing: border-box;
-
 }
 
 .hebergements-cards .card-title {
@@ -328,7 +321,6 @@ button.filter-buttons:hover {
     margin-top: 8px;
     margin-bottom: 8px;
     margin-left: 15px;
-
 }
 
 .hebergements-cards .card-subtitle {
@@ -530,6 +522,10 @@ footer h3 {
     .populaires-cards .card-subtitle {
         font-size: 13px;
     }
+
+    .filter-buttons {
+        padding: 13px 17px;
+    }
     
    
     
@@ -596,7 +592,7 @@ footer h3 {
 
     /** formulaire de recherche **/
       
-      .formulaire-et-filtre {
+    .formulaire-et-filtre {
         padding: 0px 20px 0px 20px;
         width: auto;
       }
@@ -612,7 +608,7 @@ footer h3 {
         width: 249px;
       }
     
-      .search-bar button {
+      form button {
         width: 49px;
         border-radius: 15px;
         padding: 0px 0px 0px 0px;
@@ -626,6 +622,15 @@ footer h3 {
       .loupe {
         display: block;
       }
+
+    /** filtres **/
+    .filter-buttons {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .fa-money-bill-wave, .fa-person
+   
 
     /** hébergements et populaires  **/
     .hebergements-and-populaires {
