--- a/booki-starter-code-master/css/style.css
+++ b/booki-starter-code-master/css/style.css
@@ -61,6 +61,7 @@ header {
     justify-content: space-between;
     align-items: center;
     height: 79px;
+    margin: 0px -50px;
 }
 
 .logo {
@@ -69,6 +70,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .logo img {
@@ -104,7 +106,7 @@ nav li:hover a {
 
 .menu a {
     text-decoration: none;
-    font-weight: 500;
+    
 }
 
 a {
@@ -131,7 +133,8 @@ a {
 
 .headline h1 {
     margin: 8px 0px 0px 0px;
-    font-size: 16px;
+    font-size: 22px;
+    
 }
 
 .recherche {
@@ -185,6 +188,7 @@ a {
     border: none;
     
   }
+
   
   .rechercher {
     display: block;
@@ -201,37 +205,75 @@ a {
 
 /***** Filtres ******/
 
-.Filtres h2 {
-    margin-right: 15px;
+.headline p {
+    margin-bottom: 35px;
+    margin-top: 8px;
+}   
+
+
+.filtres {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  align-items: center;
+  height: 50px;
+  
 }
 
-.Filtres i {
-    padding-right: 10px;
-
-}
-.filter-buttons {
-    border-style: solid;
-    border-color: #d9d9d9;
-    font-weight: 700;
-    border-radius: 100px;
-    padding-left: 15px;
-    padding-right: 15px;
-    justify-content: flex-start;
-    margin: 5px;
-    margin-bottom: 10px;
-    font-size: 17px;
-    border-width: 2px;
-    background-color: white;
+.filtre-title {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
 }
 
-.logements-dispo i {
-    width: 18px;
-    height: 18px;
-    border-radius: 56px;
-    border: 1px solid #d9d9d9;
-    padding: 4px;
-    text-align: center;
-    margin-right: 8px;
+.filtres-texte {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 15px;
+  
+  
+}
+
+.eco-fam,
+.rom-pep {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+ 
+}
+
+.eco,
+.fam,
+.rom,
+.pep {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  align-items: center;
+  border: solid 2px #d9d9d9;
+  border-radius: 25px;
+  padding: 0px 19px 0px 19px
+  
+ 
+}
+
+.eco:hover,
+.fam:hover,
+.rom:hover,
+.pep:hover {
+  background-color: #deebff;
+}
+
+
+.filtres h4 {
+  margin: 0px;
+  font-size: 17px;
+  font-weight: 700;
+  line-height: 20px;
+  
 }
 
 
@@ -240,9 +282,37 @@ button.filter-buttons:hover {
     background-color: #DEEBFF;
 }
 
+.filtres-texte h4 {
+    margin: 0px;
+    font-size: 17px;
+}
 
+
+
+.info-bar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     
+    gap: 10px;
+    width: 100%;
 
+  }
+  
+ 
+
+  .i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 24px;
+    width: 24px;
+    border: solid 1px #d9d9d9;
+    border-radius: 12px;
+    
+  }
+
+ 
 
 /**** Pour changer la position du texte Filtres selon le format ***/
 
@@ -252,6 +322,30 @@ button.filter-buttons:hover {
         flex-direction: row;
         justify-content: start;
     }
+    .filtre-title {
+        margin-top: 35px;
+        margin-right: 15px;
+        margin-bottom: 37.5px;
+        margin-top: 35px;
+      }
+      .eco,
+    .fam,
+    .rom,
+    .pep {
+ 
+  height: 50px;
+  margin-top: 35px;
+ 
+}
+.info-bar p {
+    margin-bottom: 0px;
+    margin-top: 0px;
+  }
+
+  .info-bar {
+    margin-bottom: 37.5px;
+    padding-top: 0px;
+  }
   
 }
 
@@ -527,7 +621,18 @@ footer h3 {
         padding: 13px 17px;
     }
     
+    header {
+        margin: 0px -30px;
+
+    }
    
+    /** filtres **/
+    .eco,
+    .fam,
+    .rom,
+    .pep {
+      padding: 13px 17px;
+    }
     
 }
 
@@ -547,7 +652,7 @@ footer h3 {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 0px -20px;
+        margin-bottom: 35px;
 
       }
     
@@ -590,8 +695,31 @@ footer h3 {
         border-bottom: solid 2px #0065fc;
       }
 
-    /** formulaire de recherche **/
+      .logo {
+        margin-bottom: 30px;
+        margin-top: 30px;
+      }
+
+
+
+
+    /** formulaire de recherche et titre **/
       
+    .headline h1 {
+        margin-top: 70px;
+        
+        
+    }
+    
+    .headline p {
+        margin-bottom: 35px;
+    }
+
+    .Filtres h3 {
+        margin-top: 35px;
+    }
+
+
     .formulaire-et-filtre {
         padding: 0px 20px 0px 20px;
         width: auto;
@@ -624,12 +752,69 @@ footer h3 {
       }
 
     /** filtres **/
-    .filter-buttons {
+    
+    .filtre {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        gap: 20px;
+        height: 161px;
+        width: 335px;
+      }
+    
+      .filtres-texte {
         flex-direction: column;
         gap: 20px;
-    }
+      }
+    
+      .eco-fam,
+      .rom-pep {
+        gap: 10px;
+        width: 335px;
+      }
+    
+      .eco,
+      .fam,
+      .rom,
+      .pep {
+        padding-top: 15px;
+        padding-bottom: 15px;
+      }
+    
+      .eco {
+        padding-right: 24.5px;
+      }
+    
+      .fam {
+        padding-left: 21px;
+        padding-right: 56.5px;
+        gap: 14.56px;
+      }
+    
+      .rom {
+        padding-right: 27.5px;
+      }
+    
+      .pep {
+        padding-left: 19.5px;
+        padding-right: 29px;
+        gap: 11.5px;
+      }
+    
+      .filtres-texte h4 {
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 16px;
+      }
 
-    .fa-money-bill-wave, .fa-person
+      .info-bar {
+        margin-bottom: 5px;
+        margin-top: 5px;
+      }
+    
+
+
+ 
    
 
     /** hébergements et populaires  **/
